Minor bug fixes and polishes